# cloudpulse-azure-optimizer

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  render.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
apps/api/: README.md  __init__.py  alembic.ini  app_logging.py  config.py  ingest.py  main.py  pyproject.toml  schemas.py
apps/api/auth/: __init__.py  deps.py  jwt.py
apps/api/azure/: __init__.py  advisor.py  cost.py  metrics.py  obo.py  resource_graph.py  subscriptions.py
apps/api/db/: __init__.py  models.py  repositories.py  session.py
apps/api/db/alembic/: env.py
apps/api/db/alembic/versions/: 0001_init.py
apps/api/engine/: __init__.py  anomalies.py  rules.py
apps/api/fixtures/: advisor.json  cost-legacy.json  cost-spike.json  cost-tags.json  cost.json  inventory-legacy.json  inventory-tags.json  inventory.json  metrics-legacy.json  metrics-tags.json  metrics.json  subscriptions.json
apps/api/providers/: copilot.py  grok.py  huggingface.py  openrouter.py
apps/api/routers/: anomalies.py  copilot.py  cost.py  findings.py  ingest.py  me.py  subscriptions.py  summary.py
apps/api/services/: ingest_service.py  mock_data.py  summary_service.py
apps/api/tests/: test_anomalies.py  test_rules.py
apps/api/utils/: rate_limit.py
apps/web/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
apps/web/app/anomalies/: page.tsx
apps/web/app/connect/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/findings/[id]/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/report/: page.tsx
apps/web/app/styles/: globals.css
apps/web/components/: TopNav.tsx
apps/web/lib/: api.ts  auth.ts
apps/web/public/: _redirects
docs/: production-checklist.md  threat-model-lite.md
helm/cloudpulse/: Chart.yaml  values.yaml
helm/cloudpulse/templates/: api-deployment.yaml  api-service.yaml  ingress.yaml  web-deployment.yaml  web-service.yaml
k8s/: README.md  api-deployment.yaml  api-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  web-deployment.yaml  web-service.yaml
scripts/: dev.sh  init_repo.sh
