[tool.poetry]
name = "cloudpulse-api"
version = "0.1.0"
description = "CloudPulse FastAPI backend"
authors = ["CloudPulse"]
readme = "README.md"
packages = [{ include = "*.py" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = { version = "^0.30.6", extras = ["standard"] }
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
pydantic = "^2.10.2"
pydantic-settings = "^2.6.1"
httpx = "^0.27.2"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.10.1"
cryptography = "^43.0.3"
msal = "^1.30.0"
cachetools = "^5.5.0"
tenacity = "^9.0.0"
orjson = "^3.10.12"
python-multipart = "^0.0.20"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.8.0"
mypy = "^1.13.0"
types-requests = "^2.32.0.20241016"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "B905", "E501", "I001", "UP017", "UP035"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
check_untyped_defs = false
warn_return_any = false
ignore_errors = true
disable_error_code = [
    "arg-type",
    "attr-defined",
    "import-untyped",
    "index",
    "misc",
    "no-any-return",
    "no-untyped-call",
    "no-untyped-def",
    "type-arg",
    "union-attr",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

